# jit-assembler

./: Cargo.toml  Dockerfile  README.md  flake.nix
.devcontainer/: devcontainer.json
.github/workflows/: cd.yml  ci.yml
examples/: instruction_collection_merge.rs  jit_calculator.rs  jit_execution.rs  register_tracking_demo.rs
jit-assembler-macros/: Cargo.toml
src/: common.rs  lib.rs
src/aarch64/: builder.rs  instruction.rs  macros.rs  mod.rs  tests.rs
src/common/: mod.rs  register_usage.rs
src/riscv/: builder.rs  instruction.rs  macros.rs  mod.rs  register_usage.rs  tests.rs
src/riscv64/: builder.rs  instruction.rs  macros.rs  mod.rs  tests.rs
