[package]
name = "jit-assembler"
version = "0.1.0"
authors = ["petitstrawberry <petitstrawberry.dev@gmail.com>"]
edition = "2021"
description = "A multi-architecture JIT assembler library for runtime code generation"
license = "MIT"
keywords = ["jit", "assembler", "compiler", "codegen", "no-std"]
categories = ["development-tools", "no-std", "compilers"]
repository = "https://github.com/petitstrawberry/jit-assembler"
documentation = "https://docs.rs/jit-assembler"
homepage = "https://github.com/petitstrawberry/jit-assembler"
readme = "README.md"

[dependencies]
jit-allocator2 = { version = "0.2", optional = true }
hashbrown = { version = "0.14", default-features = false, optional = true }

[features]
default = ["std", "riscv"]
std = ["jit-allocator2"]
riscv = []
x86_64 = []
arm64 = []
register-tracking = ["hashbrown"]

[dev-dependencies]
# For tests that might need std features